[metadata]
name = crashbench
version = 0.1

description = Benchmark and death testing tool
long_description = file: README.md
url = https://github.com/tsche/crashbench
project_urls =
    Bug Tracker = https://github.com/tsche/crashbench/issues

author = Tsche
author_email= contact@palliate.io

license = MIT
license_files = LICENSE

platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
python_requires = >=3.10
include_package_data = True
install_requires = file: requirements.txt

[options.extras_require]
testing = file: requirements_dev.txt


[options.entry_points]
console_scripts =
    crashbench = crashbench:main

[options.packages.find]
where=src

[options.package_data]
* = 
    py.typed
    **/queries/*.lisp
[flake8]
extend-ignore = D1, D2, E1, E2, E3, E501, W1, W2, W3, W5
